# godice-framework

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
darwin/GodiceClientApp/: BUILD.bazel
darwin/cli/: BUILD.bazel  main.c
darwin/framework/: BUILD.bazel  Bridge.c  Bridge.h  GoDiceBLEController.swift  GoDiceWrapper.swift  Info.plist  exported_symbols.lds
darwin/godice_client.xcodeproj/: project.pbxproj
darwin/macos_app/: BUILD.bazel  ContentView.swift  Info.plist
godice_client.xcodeproj/: project.pbxproj
godice_client/GodiceClient/: UnityBridge.c  UnityBridge.h
godice_client/GodiceClientApp/: BUILD.bazel  GodiceClientApp.swift
godice_client/godice_c_test/: BUILD.bazel  main.c
godice_client/godice_client/: BluetoothController.swift  ContentView.swift  GoDiceBLEController.swift  GoDiceDataParser.swift  GoDiceWrapper.swift  godice_clientApp.swift
godice_client/godice_client.xcodeproj/: project.pbxproj
godice_client/godice_framework/: BUILD.bazel  GoDiceBLEController.swift  GoDiceWrapper.swift  Info.plist  UnityBridge.c  UnityBridge.h  UnityBridge.m
scripts/: install_darwin_bundle.sh  install_windows_dll.sh
unity/: .gitignore
unity/UnityGoDiceTest/: UpgradeLog.htm
unity/UnityGoDiceTest/Assets/: AppleDiceInterfaceImports.cs  DiceInterface.cs  DicePanelController.cs  NativeDiceInterfaceImports.cs  WindowsBluetoothWatcher.cs
unity/UnityGoDiceTest/Assets/Scenes/: SampleScene.unity
unity/UnityGoDiceTest/ProjectSettings/: ProjectSettings.asset
unity_test/UnityGoDiceTest/Assets/: AppleDiceInterfaceImports.cs  DiceInterface.cs  DicePanelController.cs  WindowsBluetoothWatcher.cs  WindowsDiceInterfaceImports.cs
unity_test/UnityGoDiceTest/Assets/Scenes/: SampleScene.unity
unity_test/UnityGoDiceTest/ProjectSettings/: ProjectSettings.asset
windows/: .gitignore  BUILD.bazel  BleWinrtDll.sln  GoDiceInterface.sln
windows/BleTest/: BleTest - Backup.csproj  BleTest.csproj  BleWinrtDll.lib  IDiceInterfaceImports.cs  NativeDiceInterfaceImports.cs  Program.cs
windows/BleWinrtDll/: BleWinrtDll.cpp  BleWinrtDll.h  BleWinrtDll.vcxproj  GoDiceBluetoothWatcher.cs  stdafx.h
windows/GoDiceConsoleApp/: GoDiceConsoleApp.cpp  GoDiceConsoleApp.vcxproj  GoDiceConsoleApp.vcxproj.filters
windows/GoDiceDll/: BleWinrtDll.cpp  BleWinrtDll.h  GoDiceDll.cpp  GoDiceDll.h  GoDiceDll.vcxproj  WorkQueue.cpp  WorkQueue.h
windows/bluetoth-uwp/bluetoth-uwp/: App.xaml.cs  GoDiceBluetoothWatcher.cs  MainPage.xaml.cs  Package.appxmanifest
windows_test/bluetoth-uwp/: bluetoth-uwp.sln
windows_test/bluetoth-uwp/bluetoth-uwp/: App.xaml  MainPage.xaml  bluetoth-uwp.csproj
windows_test/bluetoth-uwp/bluetoth-uwp/Properties/: AssemblyInfo.cs
