load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:macos.bzl", "macos_framework")

swift_library(
    name = "lib",
    srcs = [
        "GoDiceBLEController.swift",
        "GoDiceWrapper.swift",
    ],
    module_name = "GodiceClient",
    visibility = ["//darwin/macos_app:__pkg__"],
    deps = [],
)

macos_framework(
    name = "framework",
    infoplists = ["Info.plist"],
    minimum_os_version = "11.0",
    visibility = ["//darwin/macos_app:__pkg__"],
    deps = [":c_bridge"],
)

cc_library(
    name = "c_bridge",
    srcs = ["Bridge.c"],
    hdrs = ["Bridge.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":lib",
    ],
)
