load("@build_bazel_rules_apple//apple:macos.bzl", "macos_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")



swift_library(
    name = "app_code",
    srcs = glob(["*.swift"]),
    deps = ["//godice_client/godice_framework:go_dice_wrapper"]
)

macos_application(
    name = "macos_test",
    bundle_id = "net.eagle0.macos_test",
    infoplists = [],
    minimum_os_version = "10.14",
    deps = [":app_code"],
    resources = [":assets"]
)
