load("@build_bazel_rules_apple//apple:macos.bzl", "macos_command_line_application")

cc_library(
    name = "main",
    srcs = ["main.c"],
    deps = ["//godice_client/godice_framework:unity_bridge"]
)

macos_command_line_application(
    name = "c_test",
    deps = [":main"],
    minimum_os_version = "10.14"
)
