load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:macos.bzl", "macos_framework")

swift_library(
    name = "lib",
    srcs = [
        "GoDiceBLEController.swift",
        "GoDiceWrapper.swift",
    ],
    module_name = "GodiceClient",
    visibility = ["//godice_client/GodiceClientApp:__pkg__"],
    deps = [],
)

macos_framework(
    name = "framework",
    infoplists = ["Info.plist"],
    minimum_os_version = "11.0",
    visibility = ["//godice_client/GodiceClientApp:__pkg__"],
    deps = [":unity_bridge"],
)

cc_library(
    name = "unity_bridge",
    srcs = ["UnityBridge.c"],
    hdrs = ["UnityBridge.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":lib",
    ],
)
